force-app/main/default/objects/ssot__AdverseEventCause__dlm/fields/ssot__AssessmentMethodCodeId__c.field-meta.xml
<CustomField>
    <fullName>ssot__AssessmentMethodCodeId__c</fullName>
    <label>Assessment Method Code</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>AssessmentMethodCodeId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>