force-app/main/default/objects/ssot__AdverseEventCause__dlm/fields/ssot__AuthoredById__c.field-meta.xml
<CustomField>
    <fullName>ssot__AuthoredById__c</fullName>
    <label>Authored By</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>AuthoredById</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>