force-app/main/default/objects/ssot__AdverseEventCause__dlm/fields/ssot__AuthoredByObject__c.field-meta.xml
<CustomField>
    <fullName>ssot__AuthoredByObject__c</fullName>
    <label>Authored By Object</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>AuthoredByObject</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>