force-app/main/default/objects/ssot__AdverseEventCause__dlm/fields/ssot__CauseCodeObject__c.field-meta.xml
<CustomField>
    <fullName>ssot__CauseCodeObject__c</fullName>
    <label>Cause Code Object</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>CauseCodeObject</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>