force-app/main/default/objects/ssot__AdverseEventCause__dlm/fields/ssot__rel_1716667880858_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1716667880858_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AdverseEventCause_AdverseEventId_map_rel</label>
    <referenceTo>ssot__AdverseEvent__dlm</referenceTo>
    <relationshipLabel>AdverseEventCause_AdverseEventId_map_rel</relationshipLabel>
    <relationshipName>rel_1716667880858_end</relationshipName>
    <type>Lookup</type>
</CustomField>