force-app/main/default/objects/ssot__AdverseEventCause__dlm/fields/ssot__rel_1716721822643_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1716721822643_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AdverseEventCause_CauseCodeId_map_Co_rel</label>
    <referenceTo>ssot__CodeSet__dlm</referenceTo>
    <relationshipLabel>AdverseEventCause_CauseCodeId_map_Co_rel</relationshipLabel>
    <relationshipName>rel_1716721822643_end</relationshipName>
    <type>Lookup</type>
</CustomField>