force-app/main/default/objects/ssot__AdverseEventCause__dlm/fields/ssot__rel_1716721825414_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1716721825414_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AdverseEventCause_AssessmentMethodCo_rel</label>
    <referenceTo>ssot__CodeSetBundle__dlm</referenceTo>
    <relationshipLabel>AdverseEventCause_AssessmentMethodCo_rel</relationshipLabel>
    <relationshipName>rel_1716721825414_end</relationshipName>
    <type>Lookup</type>
</CustomField>